# libactiveobject

./: .drone.yml  .gitignore  .gitlab-ci.yml  .plzconfig  .travis.yml  BUILD  CMakeLists.txt  LICENSE  README.md  Rakefile  conanfile.py  fips.yml  package.xml  wercker.yml
.travis/: install_deps_osx.sh
cmake/: BuildGTestLibraries.cmake  Config.cmake.in  narval_installation.cmake
include/active_object/: active.h  bounded_shared_queue.h  shared_queue.h
lib/: CMakeLists.txt  active.cpp  active_idle.cpp
test/unit/: CMakeLists.txt  bounded_shared_queue_test.cpp
