<?xml version="1.0"?>
<package format="2">
  <name>active_object</name>
  <version>0.0.1</version>
  <description>The active_object package </description>

  <maintainer email="amarburg@uw.edu">A. Marburg</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
